# colorway

./: README.md  io.github.lainsce.Colorway.Devel.json  io.github.lainsce.Colorway.doap  meson.build  meson_options.txt
.github/workflows/: flatpak.yml
build-aux/flatpak/: io.github.lainsce.Colorway.json
data/: io.github.lainsce.Colorway.appdata.xml.in  io.github.lainsce.Colorway.desktop.in  io.github.lainsce.Colorway.gresource.xml  io.github.lainsce.Colorway.gschema.xml  io.github.lainsce.Colorway.metainfo.xml.in  meson.build  style-dark.css  style-hc.css  style.css
data/icons/: meson.build
data/ui/: keys.ui  menu.blp  menu.ui  window.blp  window.ui
po/: LINGUAS  POTFILES  README.md  de.po  en_GB.po  es.po  fr.po  hi.po  hr.po  io.github.lainsce.Colorway.pot  it.po  nl.po  oc.po  sk.po  tr.po
src/: chooser.vala  colorbutton.vala  hue_slider.vala  main.vala  utils.vala  window.vala
